--- a/src/release/langs/lang.de.json
+++ b/src/release/langs/lang.de.json
@@ -32,7 +32,7 @@
       "number":"Nummer"
     },
     "descriptions":{
-      "join":"Nutzer beigetreten",
+      "join":"Tritt dem DJ-Booth\/der Warteliste bei",
       "leave":"Verlässt den DJ-Booth\/die Warteliste",
       "whoami":"Siehe deine eigenen Informationen ein",
       "mute":"Stelle die Lautstärke auf 0",
