--- a/src/release/langs/lang.it.json
+++ b/src/release/langs/lang.it.json
@@ -1,5 +1,5 @@
 {
-  "running":"Eseguire plug&#179; version%1",
+  "running":"Sto eseguendo plug&#179; versione %1",
   "runningLite":"Sto eseguendo plug&#179; in Lite!",
   "runningLiteInfo":"Alcune caratteristiche potrebbero non funzionare.",
   "commandsHelp":"Usa \"\/commands\" per estendere la lista dei comandi eseguibili in chat.",
@@ -20,51 +20,51 @@
     "enlarge":"Ingrandisci"
   },
   "commands":{
-    "header":"User Information",
-    "userCommands":"Controlli dell'utente",
+    "header":"comandi di plug&#179;",
+    "userCommands":"Comandi dell'utente",
     "modCommands":"Commandi di moderazione",
     "variables":{
-      "username":"Nome Utente",
+      "username":"nome utente",
       "word":"parola",
       "on":"attivato",
       "off":"disattivato",
-      "reason":"Motivo",
+      "reason":"motivo",
       "number":"numero"
     },
     "descriptions":{
-      "join":"User Join",
-      "leave":"User Leave",
-      "whoami":"Ottieni le tue informazioni",
+      "join":"entra nella lista di attesa",
+      "leave":"esci dalla lista di attesa",
+      "whoami":"ottieni le tue informazioni",
       "mute":"Imposta il volume a 0",
       "automute":"registra la canzone corrente per non fartela sentire automaticamente la prossima volta che viene riprodotta",
-      "unmute":"Reimposta il volume al livello precedente",
-      "nextsong":"Visualizza la prossima canzone nella playlist e se è presente nella cronologia",
-      "refresh":"Ricarica il video",
+      "unmute":"reimposta il volume al livello precedente",
+      "nextsong":"visualizza la prossima canzone nella playlist e se è presente nella cronologia",
+      "refresh":"ricarica il video",
       "alertson":"riproduce il suono ogni volta che le parole definite sono scritte in chat",
       "alertsoff":"interrompe la riproduzione del suono quando le parole definite sono scritte in chat",
       "grab":"aggiunge il brano corrente alla tua playlist selezionata",
       "badges":"Mostra\/Nascondi i distintivi utente nella chat",
-      "getpos":"Mostra la posizione attuale nella lista d'attesa",
-      "version":"Mostra il numero di versione",
-      "commands":"Mostra questa lista.",
+      "getpos":"mostra la posizione attuale nella lista d'attesa",
+      "version":"mostra il numero di versione",
+      "commands":"mostra questa lista",
       "link":"incolla il link al sito Web plugCubed in chat",
       "whois":"da informazioni generali riguardo l'utente",
       "skip":"salta la canzone corrente",
-      "ban":"Caccia l'utente selezionato",
-      "lockskip":"locks DJ booth, skip and unlocks afterwards",
+      "ban":"caccia l'utente selezionato",
+      "lockskip":"blocca la lista di attesa, salta la canzone e sblocca la lista",
       "lock":"Blocca la cabina DJ",
       "unlock":"Sblocca la cabina DJ",
-      "add":"adds targeted user to dj booth\/waitlist",
-      "remove":"removes targeted user from dj booth\/waitlist",
+      "add":"aggiunge l'utente selezionato alla lista di attesa",
+      "remove":"rimuove utente selezionato dalla lista d'attesa",
       "whois all":"dà userid e username di tutti gli utenti nella stanza",
       "banall":"banna tutti gli utenti nella stanza",
-      "status":"shows status of plug servers"
+      "status":"mostra lo stato dei server di plug"
     },
     "responses":{
       "alertson":"Riproduzione del suono alle seguenti parole: %1",
       "alertsoff":"Non riprodurrò il suono sulle parole impostate",
-      "badgeon":"Badges have been turned on",
-      "badgeoff":"Badges have been turned off",
+      "badgeon":"I distintivi sono stati attivati",
+      "badgeoff":"I distintivi sono stati disattivati",
       "nextsong":"Il brano successivo in coda è %1 di %2",
       "isHistory":"Attenzione: Questa canzone è ancora presente nella cronologia (%1  di %2)",
       "automute":{
@@ -85,15 +85,15 @@
     "joinTime":"Se ti iscrivi adesso alla lista d'attesa, saresti DJing in circa %1!"
   },
   "notify":{
-    "header":"User Information",
-    "join":"User Join",
-    "leave":"User Leave",
-    "grab":"User Grab",
-    "meh":"User Mehs",
+    "header":"Notifiche chat",
+    "join":"Quando entra un utente",
+    "leave":"Quando esce un utente",
+    "grab":"Quando un utente salva una canzone",
+    "meh":"Quando ad un utente non piace una canzone",
     "stats":"Statistiche della canzone",
     "updates":"Aggiornamenti della canzone",
-    "history":"Songs in history",
-    "songUnavailable":"Song Unavailable",
+    "history":"Canzoni nello storico",
+    "songUnavailable":"Canzone non disponibile",
     "songLength":"Lunghezza della Canzone (%1 min)",
     "message":{
       "grab":"Salvata %1 - %2",
@@ -102,13 +102,13 @@
       "meh":"Valuta meh questa canzone",
       "join":"è entrato nella stanza",
       "leave":"ha lasciato la stanza",
-      "history":"Song is in history (%1 of %2)",
-      "historySkipped":"Song is in history (%1 of %2), but was skipped on the last play",
-      "songLength":"Song is longer than %1 minutes",
-      "songPrivate":"Song is private",
-      "songNotFound":"Song not found",
-      "songEmbed":"Song has embedding disabled",
-      "songStreamable":"Song doesn't support streaming"
+      "history":"La canzone è nello storico (%1 di %2)",
+      "historySkipped":"La canzone è nello storico (%1 di %2), ma è stata saltata l'ultima volta",
+      "songLength":"La canzone è più lunga di %1 minuti",
+      "songPrivate":"La canzone è privata",
+      "songNotFound":"Canzone non trovata",
+      "songEmbed":"La canzone ha l'incorporamento disattivato",
+      "songStreamable":"La canzone non supporta lo streaming"
     }
   },
   "info":{
@@ -116,36 +116,36 @@
     "name":"Nome",
     "title":"Titolo",
     "specialTitles":{
-      "developer":"plug³ sviluppatore",
-      "sponsor":"plug³ Sponsor",
-      "ambassador":"plug³ Ambasciatore ",
-      "donatorDiamond":"plug³ Diamante Donatore",
-      "donatorPlatinum":"plug³ Platino Donatore",
-      "donatorGold":"plug³ Oro Donatore",
-      "donatorSilver":"plug³ Argento Donatore",
-      "donatorBronze":"plug³ Bronzo Donator",
-      "special":"plug³ Sostenitore speciale - %1"
+      "developer":"sviluppatore plug&#179;",
+      "sponsor":"sponsor plug&#179;",
+      "ambassador":"ambasciatore plug&#179;",
+      "donatorDiamond":"donatore Diamante plug&#179;",
+      "donatorPlatinum":"donatore Platino plug&#179;",
+      "donatorGold":"donatore Oro plug&#179;",
+      "donatorSilver":"donatore Argento plug&#179;",
+      "donatorBronze":"donatore Bronzo plug&#179;",
+      "special":"Sostenitore speciale plug&#179; - %1"
     },
     "id":"ID",
-    "rank":"Rango",
-    "joined":"Time Joined",
+    "rank":"Grado",
+    "joined":"Momento in cui è entrato",
     "status":"Stato",
     "vote":"Vota",
     "position":"Posizione",
     "points":"Punti",
-    "wootCount":"Woot contati",
-    "mehCount":"Meh Contati",
+    "wootCount":"Conteggio Woot",
+    "mehCount":"Conteggio Meh",
     "ratio":"Rapporto tra Woot\/Meh",
     "djing":"DJing attuale",
-    "notInList":"Not in waitlist nor booth",
-    "inWaitlist":"%1\/%2 in waitlist",
-    "userDjing":"%1 are currently DJing",
-    "userNextDJ":"%1 are DJing next",
-    "disconnects":"Disconnects",
-    "lastDisconnect":"Last Disconnect",
+    "notInList":"Non è ne in lista di attesa ne in booth",
+    "inWaitlist":"%1\/%2 in lista d'attesa",
+    "userDjing":"%1 è attualmente DJing",
+    "userNextDJ":"%1 sarà DJing successivamente",
+    "disconnects":"Disconnessioni",
+    "lastDisconnect":"Ultima disconnessione",
     "lastPosition":"Posizione",
     "time":"Tempo",
-    "lastMessage":"Last Message"
+    "lastMessage":"Ultimo messaggio"
   },
   "ranks":{
     "you":"Tu",
@@ -153,59 +153,59 @@
     "residentdj":"DJ residente",
     "bouncer":"Buttafuori",
     "manager":"Direttore",
-    "cohost":"Co-Host",
+    "cohost":"Co-Creatore",
     "host":"Conduttore",
-    "ambassador":"Ambasciatore",
+    "ambassador":"Ambasciatore\n",
     "admin":"Amministratore\n"
   },
   "roomSpecificSettings":{
-    "infoHeader":"This room is using special settings",
-    "infoHeaderCredits":"This room is using special settings by %1",
-    "infoDisable":"You can disable them in the menu"
+    "infoHeader":"Questa camera utilizza impostazioni speciali",
+    "infoHeaderCredits":"Questa camera sta utilizzando le impostazioni speciali di %1",
+    "infoDisable":"Puoi disattivarle dal menú"
   },
   "menu":{
     "autowoot":"Autowoot",
     "autojoin":"Join Automatico",
     "customchatcolors":"Colori personalizzati chat",
-    "autorespond":"AFK Autorespond",
+    "autorespond":"Auto-risposte AFK",
     "notify":"Notifiche",
-    "afktimers":"AFK Timers",
-    "etatimer":"ETA Timer",
+    "afktimers":"Timer AFK",
+    "etatimer":"Timer ETA",
     "roomsettings":"Impostazioni della Camera",
-    "chatimages":"Chat Images",
-    "twitchemotes":"Twitch Emotes",
-    "controlpanel":"Control Panel",
-    "showdeletedmessages":"Show Deleted Messages"
+    "chatimages":"Immagini chat",
+    "twitchemotes":"Emoticons Twitch",
+    "controlpanel":"Pannello di Controllo",
+    "showdeletedmessages":"Visualizza i messaggi eliminati"
   },
   "vote":{
     "meh":"Meh",
     "woot":"Woot",
-    "grab":"Grab",
+    "grab":"Salva",
     "undecided":"Indeciso",
     "djing":"DJing"
   },
   "tooltip":{
-    "stream":"Toggle Video\/Audio Stream",
+    "stream":"Attiva\/Disattiva streaming Audio\/Video",
     "clear":"Pulisce la conversazione",
     "afk":"Messaggio di AFK",
     "reset":"Ripristinare le impostazioni",
-    "muted":"All songs are muted",
-    "mutedOnce":"Current song is muted"
+    "muted":"Tutte le canzoni sono silenziate",
+    "mutedOnce":"Il brano corrente è silenziato"
   },
   "error":{
     "userNotFound":"Utente non trovato",
-    "alreadyInWaitList":"User %1 is already in waitlist",
-    "notInWaitList":"User %1 is not in waitlist",
-    "unknownMenuKey":"Unknown menu key: %1",
-    "invalidAddSyntax":"Invalid syntax for add command. Usage: \/add @user",
-    "invalidBanSyntax":"Invalid syntax for ban command. Usage: \/ban @user or \/ban @user::time::reason",
-    "invalidBanTime":"The time specified, %1 is invalid. Valid times are 60, 1, 24, 1440, -1",
-    "invalidRemoveSyntax":"Invalid syntax for remove command. Usage: \/remove @user",
-    "invalidWhoisSyntax":"Invalid syntax for whois command. Usage: \/whois @user",
-    "noLiteSupport":"This is not supported in plug&#179; Lite",
-    "errorGettingPlaylistInfo":"Error getting playlist info",
-    "noPlaylistsFound":"No playlists found",
-    "yourActivePlaylistIsFull":"Your active playlist is full",
-    "noNextSong":"You have no queued song"
+    "alreadyInWaitList":"L'utente %1 è già in lista d'attesa",
+    "notInWaitList":"L'utente %1 non è in lista d'attesa",
+    "unknownMenuKey":"Tasto menu sconosciuto: %1",
+    "invalidAddSyntax":"Sintassi non valida per il comando \"add\". Uso: \/add @utente",
+    "invalidBanSyntax":"Sintassi non valida per il comando \"ban\". Uso: \/ ban @utente o \/ban @utente::tempo::motivo",
+    "invalidBanTime":"Il tempo specificato, %1 non è valido. Orari validi sono 1, 24, 60, 1440, -1",
+    "invalidRemoveSyntax":"Sintassi non valida per il comando \"rimuovi\". Uso: \/remove @user",
+    "invalidWhoisSyntax":"Sintassi non valida per il comando \"whois\". Uso: \/whois @user",
+    "noLiteSupport":"Questo non è supportato in plug&#179; Lite",
+    "errorGettingPlaylistInfo":"Errore durante il recupero info playlist",
+    "noPlaylistsFound":"Nessuna playlist trovata",
+    "yourActivePlaylistIsFull":"La tua playlist attiva è piena",
+    "noNextSong":"Non hai canzoni in coda"
   }
 }
