--- a/src/release/langs/lang.sl.json
+++ b/src/release/langs/lang.sl.json
@@ -1,10 +1,10 @@
 {
-  "running":"実行中の plug³ バージョン %1",
+  "running":"Running plug&#179; version %1",
   "runningLite":"Running plug&#179; in Lite!",
-  "runningLiteInfo":"一部の機能が動作しません.",
-  "commandsHelp":"使用して '\/command ' 拡張チャット コマンドを参照します。",
+  "runningLiteInfo":"Some features will not work.",
+  "commandsHelp":"Use '\/commands' to see expanded chat commands.",
   "autorespond":{
-    "default":"離席中です",
+    "default":"I'm away from keyboard.",
     "disable":"Disable AFK Autorespond to chat",
     "nextIn":"Next AFK Autorespond will be sent from %1",
     "next":"AFK Autorespond on next mention",
@@ -24,7 +24,7 @@
     "userCommands":"User Commands",
     "modCommands":"Moderation Commands",
     "variables":{
-      "username":"ユーザー名",
+      "username":"username",
       "word":"word",
       "on":"on",
       "off":"off",
@@ -164,18 +164,18 @@
     "infoDisable":"You can disable them in the menu"
   },
   "menu":{
-    "autowoot":"自動 Woot!",
-    "autojoin":"自動 Join",
-    "customchatcolors":"チャット色変更",
-    "autorespond":"自動離席メッセージ",
+    "autowoot":"Autowoot",
+    "autojoin":"Autojoin",
+    "customchatcolors":"Custom Chat Colors",
+    "autorespond":"AFK Autorespond",
     "notify":"Notifications",
-    "afktimers":"離席タイマー",
-    "etatimer":"ETA タイマー",
+    "afktimers":"AFK Timers",
+    "etatimer":"ETA Timer",
     "roomsettings":"Room Settings",
-    "chatimages":"チャット画像",
+    "chatimages":"Chat Images",
     "twitchemotes":"Twitch Emotes",
     "controlpanel":"Control Panel",
-    "showdeletedmessages":"削除されたメッセージを表示"
+    "showdeletedmessages":"Show Deleted Messages"
   },
   "vote":{
     "meh":"Meh",
@@ -187,7 +187,7 @@
   "tooltip":{
     "stream":"Toggle Video\/Audio Stream",
     "clear":"Clear Chat",
-    "afk":"離席メッセージ",
+    "afk":"AFK Message",
     "reset":"Reset to default",
     "muted":"All songs are muted",
     "mutedOnce":"Current song is muted"
